# QAce_InnoScream

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yaml  telegram-ux-ci.yml
src/innoscream/: __init__.py  bot.py  external_apis.py  main.py
src/innoscream/api/: routes.py
src/innoscream/bot/: handlers.py  runner.py
src/innoscream/core/: config.py
src/innoscream/db/: dao.py  schema.py  scream_repo.py
src/innoscream/services/: analytics.py  meme.py  scream.py  security.py
src/innoscream/tasks/: scheduler.py
src/innoscream/telegram_ux/: __init__.py  handlers.py  interface.py  keyboards.py  messages.py  webhook.py
tests/locust/: __init__.py  locustfile.py
tests/telegram_ux/: test_handlers.py  test_keyboards.py
tests/unit/: conftest.py  test_analytics.py  test_conftest.py  test_handlers.py  test_meme.py  test_runner.py  test_scheduler.py  test_scream_repo.py  test_security.py
